# litman

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README-Agent.md  README-CN.md  README.md  index.html  install-cn.ps1  install-cn.sh  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.githooks/: commit-msg
assets/: README.md
docs/: 0-readme.md  1-philosophy.md  2-architecture.md  3-concepts.md  4-commands.md  5-tutorial.md  6-agent-benchmark.md  README.md  architecture.md  commands.md  concepts.md  config-schema.md  metadata-schema.md  philosophy.md  roadmap.md  taxonomy-schema.md
frontend/: build.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  presence.ts  projects.ts  sample-data.ts  search.ts  types.ts  useKeyboardShortcuts.ts
frontend/src/cockpit/: Cockpit.tsx
frontend/src/controls/: Controls.tsx  DetailPanel.tsx  Legend.tsx  SummaryBanner.tsx
frontend/src/graph/: ForceGraph.tsx  aggregate-drilldown.ts  dimensions.ts  encoding.ts
frontend/src/list/: PaperList.tsx
frontend/src/md/: MdView.tsx
frontend/src/nav/: BrowsePanel.tsx  LeftNav.tsx
frontend/src/pdf/: NoteDialog.tsx  ParamSwatches.tsx  PdfView.tsx  comment-manager.ts  pdf-editor-overrides.css
frontend/src/tabs/: RemovePaperConfirm.tsx  SaveDialog.tsx  TabArea.tsx
frontend/src/topbar/: SearchBox.tsx  SwitchVaultDialog.tsx  TopBar.tsx
frontend/src/trash/: TrashView.tsx
frontend/src/ui/: CheatSheet.tsx  DirectoryPicker.tsx  LitmanMark.tsx  PathField.tsx  Toast.tsx  icons.tsx  path.ts
frontend/src/welcome/: WelcomePage.tsx
src/litman/: __init__.py  __main__.py  cli.py  exceptions.py
src/litman/commands/: _drift.py  _options.py  _registry_first_time.py  _splash.py  _usage.py  add.py  agent.py  cite.py  code.py  config.py  drop.py  export.py  graph.py  gui.py  health.py  init.py  install_completion.py  install_skill.py  link.py  list.py  modify.py  open.py  pdf_text.py  project.py  promote.py  read.py  refresh.py  related.py  rename.py  revisit.py  rm.py  search.py  self_update.py  setup.py  show.py  skim.py  sync.py  taxonomy.py  trash.py  uninstall.py  (+1 more)
src/litman/core/: agent_permissions.py  agent_prefs.py  agents.py  atomic.py  checks.py  cite.py  code.py  code_scan.py  coerce.py  config.py  confirm.py  correctors.py  dates.py  dedup.py  deletion_log.py  document.py  graph_model.py  id.py  library.py  locking.py  notes.py  paper_lookup.py  pdf_text.py  portable_link.py  presence.py  project_link.py  project_refs.py  query.py  related.py  relations.py  ripple.py  search.py  seeds.py  skill.py  sync.py  taxonomy.py  terminal.py  trash.py  update_check.py  vault_registry.py  (+3 more)
src/litman/data/: __init__.py  journal_abbrev.csv
src/litman/exporters/: __init__.py  bibtex.py
src/litman/importers/: __init__.py  crossref.py  llm.py
src/litman/server/: __init__.py  routes_agent.py  routes_presence.py  routes_read.py  routes_structured.py  routes_trash.py  routes_write.py
src/litman/skills/: __init__.py
tests/: conftest.py  test_add.py  test_cli_lazy.py  test_cli_streams.py  test_code.py  test_code_local_import.py  test_config.py  test_cross_vault_wikilinks.py  test_crossref_parse.py  test_dedup.py  test_health.py  test_id.py  test_init.py  test_install_skill.py  test_link.py  test_llm_importer.py  test_modify.py  test_open.py  test_refresh.py  test_rename.py  test_rm.py  test_show.py  test_smoke.py  test_sync.py  test_taxonomy.py  test_vault_cli.py  test_vault_registry.py
tests/bench/: README.md  conftest.py  fetch_fixtures.py  manifest.yaml  run_bench.py  test_agents_agy.py  test_agents_claude.py  test_agents_cursor.py  test_agents_registry.py  test_batch.py  test_checker.py  test_codex.py  test_executor.py  test_opencode.py  test_proc.py  test_provenance.py  test_qualify.py  test_routing.py  test_run_bench_cli.py  test_runlit_isolation.py  test_scenarios_loader.py  test_seeds.py
tests/bench/harness/: __init__.py  batch.py  checker.py  executor.py  proc.py  provenance.py  qualify.py  routing.py  runlit.py  scenarios.py  seeds.py
tests/bench/scenarios/: A1-init.yaml  A2-add-clean.yaml  A3-add-dup.yaml  (+31 more)
tests/commands/: test_add.py  test_agent.py  test_bridge_drift.py  test_cli.py  test_cli_drift_hook.py  test_cli_nudge.py  test_cli_sync_nudge.py  test_cli_update_nudge.py  test_code.py  test_code_project_link_sync.py  test_config.py  test_drift.py  test_drop.py  test_enumerate_json.py  test_export.py  test_graph.py  test_gui.py  test_health.py  test_init.py  test_install_completion.py  test_install_script.py  test_install_skill.py  test_link.py  test_list.py  test_list_recency.py  test_modify.py  test_modify_project_refs.py  test_open.py  test_open_show_default.py  test_options_shared.py  test_pdf_text.py  test_phase4_funnel.py  test_project.py  test_promote.py  test_read.py  test_refresh.py  test_related.py  test_rename.py  test_restore.py  test_revisit.py  (+15 more)
tests/core/: test_agent_permissions.py  test_agent_prefs.py  test_agents_catalog.py  test_atomic.py  test_check_specs.py  test_checks.py  test_cite.py  test_code_local_import.py  test_code_scan.py  test_correctors.py  test_cross_vault_wikilinks.py  test_dates.py  test_dedup.py  test_deletion_log.py  test_document.py  test_graph_model.py  test_id.py  test_index_fastpath.py  test_link_support.py  test_locking.py  test_notes.py  test_paper_lookup.py  test_pdf_text.py  test_portable_link.py  test_presence.py  test_project_refs.py  test_query.py  test_relations.py  test_symlink_support.py  test_terminal.py  test_update_check.py  test_vault_registry.py  test_views.py  test_yaml_pool.py
tests/exporters/: test_bibtex.py
tests/importers/: test_crossref_parse.py  test_llm_importer.py
tests/server/: test_server_agent.py  test_server_capabilities.py  test_server_doc_mtimes.py  test_server_fs.py  test_server_health.py  test_server_presence.py  test_server_read.py  test_server_structured.py  test_server_trash.py  test_server_vault_gone.py  test_server_vaults.py  test_server_version.py  test_server_welcome.py  test_server_write.py
tests/tools/: make_mock_vault.py
(+155 files in other folders)
