[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "litman"
dynamic = ["version"]
description = "Local-first, AI-augmented literature management CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Wangq", email = "qingxinwong1999@gmail.com" },
]
keywords = ["literature", "bibliography", "papers", "cli", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.1",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "pypdf>=4.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lit = "litman.cli:main"

# Single source of truth for the version: src/litman/__init__.py __version__.
# pyproject reads it via attr so `lit --version`, the wheel metadata, and the
# string in exported BibTeX / the Crossref User-Agent can never drift apart.
# Bump __version__ to match the X.Y.Z of the milestone tag (v<X.Y.Z>-m<N>).
[tool.setuptools.dynamic]
version = { attr = "litman.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["litman*"]

# Bundle the skill markdown files so `lit install-skill` can copy them
# from the installed package via importlib.resources. Without this, the
# skill subdirectories are dropped by the wheel build because they
# contain no Python sources. Add a pair of patterns for every new skill.
[tool.setuptools.package-data]
"litman.skills" = [
    "lit-library/*", "lit-library/**/*",
    "lit-reading/*", "lit-reading/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # tests can use `assert False`

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src/litman", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
