[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "litman"
dynamic = ["version"]
description = "Local-first, AI-augmented literature management CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Qingxin Wang", email = "qingxinwong1999@gmail.com" },
]
keywords = [
    "literature", "bibliography", "reference-manager", "papers", "bibtex",
    "knowledge-management", "cli", "local-first", "claude-code", "ai-agent",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.1,<9",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "pypdf>=4.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
lit = "litman.cli:main"

[project.urls]
Homepage = "https://github.com/wqx1999/litman"
Repository = "https://github.com/wqx1999/litman"
Documentation = "https://github.com/wqx1999/litman/blob/main/docs/0-readme.md"
Issues = "https://github.com/wqx1999/litman/issues"

# Single source of truth for the version: src/litman/__init__.py __version__.
# pyproject reads it via attr so `lit --version`, the wheel metadata, and the
# string in exported BibTeX / the Crossref User-Agent can never drift apart.
# Bump __version__ following semver for each release; tag the commit v<X.Y.Z>.
[tool.setuptools.dynamic]
version = { attr = "litman.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["litman*"]

# Bundle the skill markdown files so `lit install-skill` can copy them
# from the installed package via importlib.resources. Without this, the
# skill subdirectories are dropped by the wheel build because they
# contain no Python sources. Add a pair of patterns for every new skill.
[tool.setuptools.package-data]
"litman.skills" = [
    "lit-library/*", "lit-library/**/*",
    "lit-reading/*", "lit-reading/**/*",
]
# Bundle the vendored webUI build (`frontend/build.sh` → vite output) so a
# `pip install 'litman[web]'` ships the SPA inside the wheel; without these
# patterns the asset tree is dropped because it carries no Python sources.
"litman" = [
    "assets/webui/*", "assets/webui/**/*",
]
# Bundle the journal abbreviation table (CC0, used by `lit cite` / the webUI
# cite endpoint). Without this the wheel drops the CSV (no Python sources in
# the dir) and `litman.core.cite` can't resolve it via importlib.resources.
"litman.data" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # tests can use `assert False`

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src/litman", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
